# odoo-community-webhooks

./: .gitignore  CLAUDE.md  PROJET ODOO — CONTEXTE GÉNÉRAL.md  README.md
addons/account-reconcile-18.0/: README.md
addons/account-reconcile-18.0/account_in_payment/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_move_base_import/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_move_reconcile_forbid_cancel/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_move_reconcile_helper/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_partner_reconcile/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_reconcile_analytic_tag/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_reconcile_due_date/: README.rst  __manifest__.py
addons/account-reconcile-18.0/account_reconcile_model_oca/: README.rst  __manifest__.py
addons/account-reconcile-18.0/setup/_metapackage/: pyproject.toml
addons/custom_display/: __manifest__.py
addons/custom_display/templates/: invoice_templates.xml  (+2 more)
addons/custom_terms/: __manifest__.py
addons/rest_api_connector/: README.md  __manifest__.py
addons/webhook_connector/: __manifest__.py
data/: pg-dump-postgres-1781891069.dmp
imports/: generate_import.py  res_partner_1_societes.csv  res_partner_1b_societes_extra.csv  res_partner_2_contacts.csv
scripts/: .env.example  audit_variants.py  backup_odoo_db.py  backup_odoo_db.sh  cleanup_fake_leads.py  decline_formations.py  deploy_addons.sh  fix_variant_refs.py  fix_variants_all.py
(+308 files in other folders)
