[project]
name = "odoo-addons-oca-account-reconcile"
version = "18.0.20260613.0"
dependencies = [
    "odoo-addon-account_in_payment==18.0.*",
    "odoo-addon-account_move_base_import==18.0.*",
    "odoo-addon-account_move_reconcile_forbid_cancel==18.0.*",
    "odoo-addon-account_move_reconcile_helper==18.0.*",
    "odoo-addon-account_partner_reconcile==18.0.*",
    "odoo-addon-account_reconcile_analytic_tag==18.0.*",
    "odoo-addon-account_reconcile_due_date==18.0.*",
    "odoo-addon-account_reconcile_model_oca==18.0.*",
    "odoo-addon-account_reconcile_oca==18.0.*",
    "odoo-addon-account_reconcile_oca_add_default_filters==18.0.*",
    "odoo-addon-account_reconcile_oca_queue==18.0.*",
    "odoo-addon-account_reconcile_restrict_partner_mismatch==18.0.*",
    "odoo-addon-account_reconcile_sale_order==18.0.*",
    "odoo-addon-account_reconcile_wizard==18.0.*",
    "odoo-addon-account_statement_base==18.0.*",
    "odoo-addon-account_statement_reconcile_status==18.0.*",
    "odoo-addon-base_transaction_id==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
